kubernetes/react-backend-demo/deploy/react-client.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client
  labels:
    app: react-client
    role: frontend
    tier: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-client
      role: frontend
      tier: demo
  template:
    metadata:
      labels:
        app: react-client
        role: frontend
        tier: demo
    spec:
      containers:
      - name: react-client
        image: brianstech/react-client-demo:latest
        ports:
        - containerPort: 3000
          name: http-client
        command:
          - npm
          - run
          - start
        resources:
          requests:
            cpu: 20m
            memory: 100Mi
          limits:
            cpu: 50m
            memory: 200Mi
        # readinessProbe:
        # livenessProbe:
