kubernetes/react-backend-demo/deploy/api-backend.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-backend
spec:
  selector:
    app: api-backend
    role: api-backend
    tier: demo
  ports:
  - port: 3001
    targetPort: http-backend
