kubernetes/react-backend-demo/deploy/react-client.service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-client
spec:
  selector:
    app: react-client
    role: frontend
    tier: demo
  ports:
  - port: 3000
    targetPort: http-client
