kubernetes/react-backend-demo/deploy/react-app.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-app
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: react-client
          servicePort: 3000
